# okruszek

./: .dockerignore  Dockerfile  nixpacks.toml
backend/: .gitignore  Cargo.toml  sqlx-data.json
backend/migrations/: 20230316090611_init.down.sql  20230316090611_init.up.sql
backend/src/: lib.rs  main.rs
backend/src/routes/: mod.rs
backend/src/routes/auth/: mod.rs  session.rs
backend/src/routes/files/: mod.rs
backend/src/routes/products/: errors.rs  mod.rs
backend/src/routes/products/comments/: errors.rs  mod.rs
backend/src/routes/products/files/: mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/lib/: AddProduct.svelte  Dashboard.svelte  Products.svelte  Rate.svelte  api.ts  interfaces.ts  stores.ts
frontend/src/lib/auth/: Auth.svelte  Login.svelte  Logout.svelte  Register.svelte
frontend/src/lib/comments/: Comment.svelte  CommentInput.svelte  Comments.svelte
frontend/src/lib/products/: AddProduct.svelte  Products.svelte  Rate.svelte
