[package]
name = "okruszek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
argon2 = "0.5.0"
axum = { version = "0.6.11", features = ["macros", "multipart"] }
axum-extra = { version = "0.7.1", features = ["cookie"] }
base64 = "0.21.0"
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.156"
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "offline"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
zxcvbn = "2.2.1"
